# dataidea-R

./: .gitignore  404.html  CNAME  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
data-analysis-r/: index.html
data-analysis-r/data-cleaning/: index.html
data-analysis-r/data-import-export/: index.html
data-analysis-r/exploratory-analysis/: index.html
data-analysis-r/introduction/: index.html
data-analysis-r/real-datasets/: index.html
data-analysis-r/statistical-analysis/: index.html
data-analysis-r/visualization/: index.html
docs/: index.md
docs/data-analysis-r/: data-cleaning.md  data-import-export.md  exploratory-analysis.md  index.md  introduction.md  real-datasets.md  statistical-analysis.md  visualization.md
docs/r-fundamentals/: control-flow.md  data-structures.md  functions.md  getting-started.md  index.md  packages.md  variables-data-types.md  vectors-operations.md
docs/stylesheets/: extra.css
r-fundamentals/: index.html
r-fundamentals/control-flow/: index.html
r-fundamentals/data-structures/: index.html
r-fundamentals/functions/: index.html
r-fundamentals/getting-started/: index.html
r-fundamentals/variables-data-types/: index.html
r-fundamentals/vectors-operations/: index.html
search/: search_index.json
